# regslop

./: .gitignore  CLAUDE.md  CONTRACTS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: contract-change.md  differ-failure.md  spec-question.md
.github/workflows/: release.yml
agents/linux/: Cargo.toml  STATE.md  spec-questions.md
agents/linux/src/: backend.rs  canonical.rs  error.rs  ffi_backend.rs  libreg_backend.rs  main.rs  model.rs  sddl.rs  valuec.rs
agents/linux/src/handlers/: diag.rs  hive.rs  key.rs  mod.rs  security.rs  test.rs  value.rs
agents/windows/: CLAUDE.md  Cargo.toml  README.md  STATE.md
agents/windows/src/: audit.rs  canonical.rs  error.rs  main.rs  response.rs  sddl.rs  state.rs  time.rs  util.rs  valuec.rs  winapi.rs
agents/windows/src/handlers/: diagnostics.rs  hive.rs  key.rs  mod.rs  security.rs  value.rs
agents/windows/src/offreg/: ffi.rs  hive.rs  key.rs  mod.rs
clients/: CLAUDE.md  Cargo.toml  STATE.md
clients/cli-core/: Cargo.toml
clients/cli-core/src/: error.rs  identify.rs  lib.rs  mount.rs  path.rs  regfile.rs  sddl.rs  search.rs  session.rs  structure.rs  value.rs
clients/packaging/: README.md  build-deb.sh
clients/packaging/conf/: hives.conf.example  regedit.conf
clients/packaging/man/: reg.1  regedit.1  regmount.1  regsc.1  sc.1  winsc.1
clients/packaging/systemd/: regedit.service
clients/proposals/: harness-client-differential.md
clients/python/: .gitignore  README.md  STATE.md  pyproject.toml
clients/python/examples/: quickstart.py
clients/python/libreg/: __init__.py  _ffi.py  canonical.py  client.py  errors.py  sddl.py  types.py
clients/python/packaging/: build-deb.sh
clients/python/tests/: test_client.py  test_ffi.py  test_sddl.py  test_values.py
clients/reg/: Cargo.toml
clients/reg/src/: main.rs
clients/regedit/: Cargo.toml
clients/regedit/src/: http.rs  json.rs  main.rs
clients/regedit/static/: index.html
clients/regmount/: Cargo.toml
clients/regmount/src/: main.rs
clients/regsc/: Cargo.toml
clients/regsc/src/: main.rs
clients/sc/: Cargo.toml
clients/sc/src/: main.rs
clients/winsc/: Cargo.toml
clients/winsc/src/: main.rs
docs/: CLAUDE.md  STATE.md  ffi-abi.md  hive-format.md
docs/adr/: 0001-http-protocol.md  0002-canonical-form.md  0003-sddl-security.md  0004-dual-transaction-logs.md  README.md
libreg/: CLAUDE.md  Cargo.toml  STATE.md
libreg/examples/: crash_recovery.rs  dump_hive.rs  make_empty_hive.rs  make_key_hive.rs
libreg/include/: libreg.h
libreg/packaging/: README.md  build-deb.sh
libreg/src/: lib.rs
libreg/src/alloc/: free_list.rs  hbin_grow.rs  mod.rs
libreg/src/api/: error.rs  handle.rs  mod.rs  tests.rs
libreg/src/format/: base_block.rs  cell.rs  db.rs  empty_hive.rs  hbin.rs  lf.rs  lh.rs  li.rs  mod.rs  nk.rs  ri.rs  security_descriptor.rs  sk.rs  vk.rs
libreg/src/log/: mod.rs
libreg/src/logical/: index.rs  key.rs  mod.rs  security.rs  value.rs
libreg/tests/: base_block_corpus.rs  create_matches_offreg.rs  enumerate_corpus.rs  hbin_walk_corpus.rs  promote_ri.rs
libreg/tests/ffi/: smoke.c
tests/corpus/synthetic/: PROVENANCE.md  ref_latin1.hiv  ref_multi.hiv  ref_one_ascii.hiv  ref_ri.hiv  ref_wide.hiv
tests/fuzz/: .gitignore  CLAUDE-fuzz.md  Cargo.toml  STATE.md
tests/fuzz/corpus/crashes/: README.md
tests/fuzz/corpus/interesting/: values.yaml
tests/fuzz/scripts/: run-fuzz.sh
tests/fuzz/src/: coverage.rs  harness_format.rs  harness_runner.rs  lib.rs  rng.rs  triage.rs
tests/fuzz/src/generators/: mod.rs  mutate.rs  ops.rs  paths.rs  recovery.rs  values.rs
tests/harness/: CLAUDE.md  Cargo.toml  STATE.md  spec-questions.md
tests/harness/scripts/: fetch-corpus.sh  run.sh
tests/harness/src/: client.rs  client_differ.rs  corpus.rs  main.rs  recovery.rs  report.rs  runner.rs  smb.rs  util.rs  winvm_lock.rs
tests/harness/src/differ/: bytewise.rs  mod.rs  regf.rs  sddl.rs  semantic.rs  structural.rs
tests/harness/tests/: badrequest.yaml  bigdata.yaml  deep_hive.yaml  keys.yaml  lifecycle.yaml  reads.yaml  security.yaml  values.yaml  wide_key.yaml
tests/harness/tests/client/: reg_add.yaml  reg_delete.yaml  reg_export.yaml  reg_import.yaml  reg_save.yaml  sc.yaml
tests/harness/tests/recovery/: recover.yaml
