[package]
name = "libreg"
version = "0.1.0"
edition = "2021"
description = "Cross-platform Windows Registry hive library"
license = "MIT OR Apache-2.0"

[lib]
name = "libreg"
path = "src/lib.rs"
# rlib so the Rust clients (the agents) keep linking libreg by path; cdylib so
# native bindings can link the Layer 4 C ABI (api/, issue #106).
crate-type = ["rlib", "cdylib"]

[dependencies]

[dev-dependencies]
