[package]
name = "libreg-agent-linux"
version = "0.1.0"
edition = "2021"
description = "Linux-side HTTP agent wrapping libreg, mirror of the Windows agent"

[[bin]]
name = "libreg-agent-linux"
path = "src/main.rs"

[dependencies]
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.11"

[profile.release]
opt-level = 2
