[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "libreg"
version = "0.1.0"
description = "Pure standard library Python client for the libreg registry agent"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "see repository" }
authors = [{ name = "libreg project" }]
keywords = ["windows", "registry", "hive", "libreg", "offreg"]

# Deliberately no runtime dependencies. The client speaks the agent's HTTP
# protocol with nothing but the Python standard library, matching the project's
# Debian first, no external dependency stance (no pip install needed to run it).
dependencies = []

[project.urls]
Repository = "https://github.com/bprochazka-bit/regslop"

[tool.setuptools.packages.find]
where = ["."]
include = ["libreg*"]
