[package]
name = "regsc"
version = "0.1.0"
edition = "2021"
description = "sc.exe-compatible offline service configuration tool"
license = "MIT OR Apache-2.0"

# Installed as `regsc` (the reg* tool family) to avoid the name clash with the
# `sc` spreadsheet calculator on Debian/Ubuntu. The packaging adds a `sc`
# symlink only when no other package owns that name (see
# clients/packaging/build-deb.sh).
[[bin]]
name = "regsc"
path = "src/main.rs"

[dependencies]
cli-core = { path = "../cli-core" }
