[package]
name = "libreg-harness"
version = "0.1.0"
edition = "2021"
description = "Differential test harness driving the Linux and Windows libreg agents"

[[bin]]
name = "libreg-harness"
path = "src/main.rs"

[dependencies]
ureq = "3"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
libc = "0.2"
